test/runtime/fail/expr/pkg_no_field.hy

// expect error: Expected identifier after `.` in package field access, found `3`

import "io"

let a = io.3
